--- a/buggy-script/index.html
+++ b/buggy-script/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
-    <script type="text/javascript" src="js/app.js">
+    <!-- <script type="text/javascript" src="js/app.js"> -->
+    <script type="text/javascript" src="../debugtest.js">
 
     </script>
     <title>Dicey</title>
